<resources>
    <string name="app_name">The Rick and Morty API</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characterStatus">Status:</string>
    <string name="characterSpecies">Species:</string>
    <string name="characterGender">Gender:</string>
    <string name="episodeAirDate">Air_date:</string>
    <string name="Episode">Episode:</string>
    <string name="locationType">Type:</string>
    <string name="locationDimension">Dimension:</string>
    <string name="list_of_episodes">List of Episodes</string>
    <string name="characterOrigin">Origin:</string>
    <string name="characterLocation">Location :</string>
    <string name="location_list_of_characters">List of Residents</string>
    <string name="list_of_characters">List of Characters</string>
</resources>